[workspace]
members = ["src/escrow"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
escrow = { path = "src/escrow" }
ic-cdk = "0.17"
ic-cdk-macros = "0.19"
ic-cdk-timers = "0.11"
pocket-ic = "12.0.0"

[workspace.lints.rust]
warnings = "deny"
unused_attributes = "deny"
redundant_imports = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
enum_glob_use = "deny"
single_component_path_imports = "warn"
absolute_paths = "deny"
allow_attributes = "deny"
std_instead_of_core = "deny"
unseparated_literal_suffix = "deny"
redundant_test_prefix = "deny"
str_to_string = "deny"
string_add = "deny"
suspicious_xor_used_as_pow = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
